create ribbon toolbar

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -4,7 +4,7 @@
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body ng-app='helloapp'>
-<ribbon-toolbar></ribbon-toolbar>
+<ribbon></ribbon>
 
 <script src='js/main.js'></script>
 <script src='js/myTitle.js'></script>
