--- a/source/html/index.html
+++ b/source/html/index.html
@@ -7,7 +7,7 @@
 <ribbon></ribbon>
 
 <script src='js/main.js'></script>
-<script src='js/myTitle.js'></script>
+<script src='js/ribbon.js'></script>
 <script src='js/ribbon-button.js'></script>
 <script src='js/ribbon-toolbar.js'></script>
 
