rename to common convention

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -4,13 +4,13 @@
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body ng-app='helloapp'>
-<ribbon></ribbon>
+<wi-ribbon></wi-ribbon>
 
 <script src='js/main.js'></script>
-<script src='js/ribbon-config.js'></script>
-<script src='js/ribbon.js'></script>
-<script src='js/ribbon-button.js'></script>
-<script src='js/ribbon-toolbar.js'></script>
+<script src='js/wi-toolbar-config.js'></script>
+<script src='js/wi-ribbon.js'></script>
+<script src='js/wi-button.js'></script>
+<script src='js/wi-toolbar.js'></script>
 
 </body>
 </html>
