--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,13 +1,15 @@
 <html>
 <head>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body ng-app='helloapp'>
 <wi-ribbon></wi-ribbon>
 
 <script src='js/main.js'></script>
-<script src='js/wi-toolbar-config.js'></script>
+<script src='js/wi-config.js'></script>
 <script src='js/wi-ribbon.js'></script>
 <script src='js/wi-button.js'></script>
 <script src='js/wi-toolbar.js'></script>
