--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <script src="vendor/js/jquery.min.js"></script>
+    <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
     <link rel='stylesheet' href='css/main.css'>
 </head>
 <body ng-app='helloapp'>
+
 <wi-ribbon></wi-ribbon>
 
 <script src='js/main.js'></script>
