--- a/source/html/test-wiToolbar.html
+++ b/source/html/test-wiToolbar.html
@@ -5,12 +5,17 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <link rel='stylesheet' href='css/main.css'>
+    <!-- inject:css -->
+    <!-- endinject -->
+
+    <!-- inject:js -->
+    <!-- endinject -->
 
     <script>
-        app = angular.module('helloapp', ['ui.bootstrap'])
-            .controller('WiDummy', function($scope) {
+        app.controller('WiDummy', function($scope) {
                 $scope.toolbarCfg = toolbarCfg;
+                $scope.buttonCfg = buttonCfg;
+                $scope.buttonCfg2 = buttonCfg2;
             });
 
         toolbarCfg = {
@@ -37,21 +42,41 @@
                 }
             ]
         };
+
+        buttonCfg = {
+            type: 'button',
+            imgUrl: 'img/32x32/project_new_32x32.png',
+            label: 'New Project',
+            layout: 'icon-left',
+            handler: {
+                onclick:function() {console.log('click');},
+                onmouseover:function() {console.log('mouseOver');}
+            }
+        };
+        buttonCfg2 = {
+            type: 'button',
+            imgUrl: 'img/32x32/project_new_32x32.png',
+            label: 'New Button',
+            layout: 'icon-top',
+            handler: {
+                onclick:function() {console.log('click');},
+                onmouseover:function() {console.log('mouseOver');}
+            }
+        };
     </script>
 
 </head>
 
 <body ng-app='helloapp'>
     <div ng-controller="WiDummy">
-        <wi-toolbar data="toolbarCfg">
-            <!--<wi-button config="btn" ng-repeat="btn in wiToolbar.data.buttons"></wi-button>-->
-            <wi-button label="my button" layout="icon-left"
-                       imgurl="img/32x32/project_new_32x32.png">
+        <wi-toolbar label="test">
+            <wi-button config="buttonCfg">
+            </wi-button>
+            <wi-button config="buttonCfg2">
             </wi-button>
         </wi-toolbar>
     </div>
 
-    <script src='js/wi-button.js'></script>
-    <script src='js/wi-toolbar.js'></script>
+
 </body>
 </html>
