--- a/source/html/test-wiButton.html
+++ b/source/html/test-wiButton.html
@@ -5,7 +5,11 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <link rel='stylesheet' href='css/wi-button.css'>
+    <!-- inject:css -->
+    <!-- endinject -->
+
+    <!-- inject:js -->
+    <!-- endinject -->
 
     <script>
         app = angular.module('helloapp', ['ui.bootstrap'])
@@ -41,6 +45,5 @@
     ></wi-button>
 </div>
 
-<script src='js/wi-button.js'></script>
 </body>
 </html>
