--- a/source/html/index.html
+++ b/source/html/index.html
@@ -5,17 +5,16 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <link rel='stylesheet' href='css/main.css'>
+    <!-- inject:css -->
+    <!-- endinject -->
+
+    <!-- inject:js -->
+    <!-- endinject -->
 </head>
 <body ng-app='helloapp'>
 
 <wi-ribbon></wi-ribbon>
 
-<script src='js/main.js'></script>
-<script src='js/wi-config.js'></script>
-<script src='js/wi-ribbon.js'></script>
-<script src='js/wi-button.js'></script>
-<script src='js/wi-toolbar.js'></script>
 
 </body>
 </html>
