--- a/source/html/test-wiToolbar.html
+++ b/source/html/test-wiToolbar.html
@@ -13,11 +13,11 @@
 
     <script>
         app.controller('WiDummy', function($scope) {
-                $scope.toolbarCfg = toolbarCfg;
+//                $scope.toolbarCfg = toolbarCfg;
                 $scope.buttonCfg = buttonCfg;
                 $scope.buttonCfg2 = buttonCfg2;
             });
-
+/*
         toolbarCfg = {
             type: 'tab',
             name: 'project',
@@ -42,26 +42,30 @@
                 }
             ]
         };
-
+*/
         buttonCfg = {
             type: 'button',
             imgUrl: 'img/32x32/project_new_32x32.png',
             label: 'New Project',
             layout: 'icon-left',
-            handler: {
-                onclick:function() {console.log('click');},
-                onmouseover:function() {console.log('mouseOver');}
+            handlers: {
+                onclick: function() {
+                    console.log('click');
+                },
+                onmouseover: function() {
+                    console.log('mouseOver');
+                }
             }
         };
         buttonCfg2 = {
             type: 'button',
             imgUrl: 'img/32x32/project_new_32x32.png',
             label: 'New Button',
-            layout: 'icon-top',
-            handler: {
-                onclick:function() {console.log('click');},
-                onmouseover:function() {console.log('mouseOver');}
-            }
+            layout: 'icon-top'
+        };
+        myHandlers = {
+            onclick:function() {console.log('click');},
+            onmouseover:function() {console.log('mouseOver');}
         };
     </script>
 
@@ -70,10 +74,10 @@
 <body ng-app='helloapp'>
     <div ng-controller="WiDummy">
         <wi-toolbar label="test">
-            <wi-button config="buttonCfg">
-            </wi-button>
-            <wi-button config="buttonCfg2">
-            </wi-button>
+            <wi-toolbar-button config="buttonCfg">
+            </wi-toolbar-button>
+            <wi-toolbar-button config="buttonCfg2">
+            </wi-toolbar-button>
         </wi-toolbar>
     </div>
 
