--- a/source/html/test-wiButton.html
+++ b/source/html/test-wiButton.html
@@ -5,35 +5,8 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <!-- inject:css -->
-    <!-- endinject -->
-
-    <!-- inject:js -->
-    <!-- endinject -->
-
-    <script>
-        app = angular.module('helloapp', ['ui.bootstrap'])
-            .controller('WiDummy', function($scope) {
-                $scope.buttonCfg = buttonCfg;
-                $scope.myHandlers = myHandlers;
-            });
-
-        buttonCfg = {
-            type: 'button',
-            imgUrl: 'img/32x32/project_new_32x32.png',
-            label: 'New Project',
-            layout: 'icon-left',
-            //layout: 'icon-top',
-            handler: function (thisButton) {
-                console.log(thisButton.label);
-            }
-        };
-        myHandlers = {
-            onclick:function() {console.log('click');},
-            onmouseover:function() {console.log('mouseOver');}
-        }
-
-    </script>
+<!--    <script src='js/wi-buttons.js'></script> -->
+    <script src='js/main.js'></script>
     <title>Test button</title>
 </head>
 
@@ -44,6 +17,5 @@
                handlers="myHandlers"
     ></wi-button>
 </div>
-
 </body>
 </html>
