--- a/source/html/test-wiToolbar.html
+++ b/source/html/test-wiToolbar.html
@@ -1,19 +1,17 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href='css/wi-toolbar.css' rel='stylesheet'>
+    <link href='css/wi-buttons.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <!-- inject:css -->
-    <!-- endinject -->
-
-    <!-- inject:js -->
-    <!-- endinject -->
-
+    <script src="js/wi-toolbar.js"></script>
+    <script src="js/wi-buttons.js"></script>
     <script>
+        app=angular.module('helloapp', ['ui.bootstrap', 'wi-toolbar', 'wi-buttons']);
         app.controller('WiDummy', function($scope) {
-//                $scope.toolbarCfg = toolbarCfg;
                 $scope.buttonCfg = buttonCfg;
                 $scope.buttonCfg2 = buttonCfg2;
             });
@@ -80,7 +78,5 @@
             </wi-toolbar-button>
         </wi-toolbar>
     </div>
-
-
 </body>
 </html>
