--- a/source/html/test-wiButton.html
+++ b/source/html/test-wiButton.html
@@ -1,12 +1,14 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href='css/wi-buttons.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-<!--    <script src='js/wi-buttons.js'></script> -->
-    <script src='js/main.js'></script>
+
+    <script src='js/main.js.bundle.js'></script>
+    
     <title>Test button</title>
 </head>
 
