--- a/source/html/test-wiButton.html
+++ b/source/html/test-wiButton.html
@@ -7,7 +7,7 @@
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
 
-    <script src='js/main.js.bundle.js'></script>
+    <script src='js/main-buttons.js.bundle.js'></script>
     
     <title>Test button</title>
 </head>
