--- a/source/html/test-wiToolbar.html
+++ b/source/html/test-wiToolbar.html
@@ -7,66 +7,8 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <script src="js/wi-toolbar.js"></script>
-    <script src="js/wi-buttons.js"></script>
-    <script>
-        app=angular.module('helloapp', ['ui.bootstrap', 'wi-toolbar', 'wi-buttons']);
-        app.controller('WiDummy', function($scope) {
-                $scope.buttonCfg = buttonCfg;
-                $scope.buttonCfg2 = buttonCfg2;
-            });
-/*
-        toolbarCfg = {
-            type: 'tab',
-            name: 'project',
-            active: true,
-            buttons: [
-                {
-                    type: 'button',
-                    imgUrl: 'img/32x32/project_new_32x32.png',
-                    label: 'New Project',
-                    layout: 'icon-left',
-                    //layout: 'icon-top',
-                    handler: function (thisButton) {
-                        console.log(thisButton.label);
-                    }
-                },
-                {
-                    type: 'button',
-                    imgUrl: 'img/32x32/project_open_32x32.png',
-                    label: 'Open Project',
-                    layout: 'icon-left',
-                    handler: 'project-open-project'
-                }
-            ]
-        };
-*/
-        buttonCfg = {
-            type: 'button',
-            imgUrl: 'img/32x32/project_new_32x32.png',
-            label: 'New Project',
-            layout: 'icon-left',
-            handlers: {
-                onclick: function() {
-                    console.log('click');
-                },
-                onmouseover: function() {
-                    console.log('mouseOver');
-                }
-            }
-        };
-        buttonCfg2 = {
-            type: 'button',
-            imgUrl: 'img/32x32/project_new_32x32.png',
-            label: 'New Button',
-            layout: 'icon-top'
-        };
-        myHandlers = {
-            onclick:function() {console.log('click');},
-            onmouseover:function() {console.log('mouseOver');}
-        };
-    </script>
 
+    <script src="js/main-toolbar.js.bundle.js"></script>
 </head>
 
 <body ng-app='helloapp'>
