--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,20 +1,53 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href='css/wi-buttons.css' rel='stylesheet'>
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
-    <!-- inject:css -->
-    <!-- endinject -->
 
-    <!-- inject:js -->
-    <!-- endinject -->
+    <script src='js/main-ribbon.js.bundle.js'></script>
+
+    <title>Test button</title>
 </head>
+
 <body ng-app='helloapp'>
+<div ng-controller="WiRibbonController">
+    <wi-ribbon>
+        <wi-tab label="toolbar1">
+            <wi-toolbar label="test">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-top"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+        </wi-tab>
+        <wi-tab label="toolbar1">
+            <wi-toolbar label="test">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-top"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+        </wi-tab>
+        <wi-tab label="toolbar1">
+            <wi-toolbar label="test">
+                <wi-button label="my button toobar" layout="icon-left"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+                <wi-button label="my button toobar" layout="icon-top"
+                           imgurl="img/32x32/project_new_32x32.png"
+                           handlers="myHandlers"></wi-button>
+            </wi-toolbar>
+        </wi-tab>
 
-<wi-ribbon></wi-ribbon>
 
-
+    </wi-ribbon>
+</div>
 </body>
 </html>
