--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,53 +1,50 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendor/css/themify-icons.css" rel="stylesheet">
+
+    <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-button.css' rel='stylesheet'>
+    <link href='css/wi-list.css' rel='stylesheet'>
+    <link href='css/wi-status-bar.css' rel='stylesheet'>
+    <link href='css/wi-tab.css' rel='stylesheet'>
+    <link href='css/wi-toolbar.css' rel='stylesheet'>
+    <link href='css/wi-treeview.css' rel='stylesheet'>
+    <link href='css/ribbon-block/ribbon-block.css' rel='stylesheet'>
+    <link href='css/status-bar/status-bar.css' rel='stylesheet'>
+    <link href='css/workspace-block/explorer-block.css' rel='stylesheet'>
+    <link href='css/workspace-block/working-block.css' rel='stylesheet'>
+    <link href='css/workspace-block/workspace-block.css' rel='stylesheet'>
+
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
-    <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
 
-    <script src='js/main-ribbon.js.bundle.js'></script>
-
-    <title>Test button</title>
+    <script src="js/main.js.bundle.js"></script>
 </head>
+<body ng-app='wiapp'>
 
-<body ng-app='helloapp'>
-<div ng-controller="WiRibbonController">
-    <wi-block>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
-        <wi-tab label="toolbar1">
-            <wi-toolbar label="test">
-                <wi-button label="my button toobar" layout="icon-left"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-                <wi-button label="my button toobar" layout="icon-top"
-                           imgurl="img/32x32/project_new_32x32.png"
-                           handlers="myHandlers"></wi-button>
-            </wi-toolbar>
-        </wi-tab>
+<div class="container" ng-controller="AppController">
 
+    <div class="ribbon-wrapper">
+        @@include('./ribbon-block/index.html')
+    </div>
 
-    </wi-block>
+    <div class="workspace-wrapper">
+        <div class="explorer-block">
+            @@include('./explorer-block/index.html')
+        </div>
+        <div class="working-block">
+            @@include('./working-block/index.html')
+        </div>
+    </div>
+
+    <div class="status-bar">
+        @@include('./status-bar/index.html')
+    </div>
+
 </div>
+
 </body>
 </html>
