--- a/source/html/index.html
+++ b/source/html/index.html
@@ -25,7 +25,7 @@
 </head>
 <body ng-app='wiapp'>
 
-<div class="container" ng-controller="AppController">
+<div class="container" ng-controller="AppController as app">
 
     <div class="ribbon-wrapper">
         @@include('./ribbon-block/index.html')
