--- a/source/html/ribbon-block/project-tab/index.html
+++ b/source/html/ribbon-block/project-tab/index.html
@@ -1,4 +1,4 @@
-<wi-tab heading="Project" closable="false">
+<wi-tab name="ProjectTab" heading="{{config.ProjectTab.heading}}" closable="false">
     <wi-toolbar name="databaseToolbar" label="Database">
         <wi-button name='newProject' label="New Project" layout="icon-top"
                    imgurl="img/32x32/project_new_32x32.png"
