--- a/source/html/ribbon-block/well-tab/index.html
+++ b/source/html/ribbon-block/well-tab/index.html
@@ -1,4 +1,4 @@
-<wi-tab heading="Well" closable="false">
+<wi-tab name="WellTab" heading='{{config.WellTab.heading}}' closable="false">
     <wi-toolbar label="Well">
         <wi-button label="Well1" layout="icon-top"
                    imgurl="img/32x32/project_new_32x32.png"
