--- a/source/html/index.html
+++ b/source/html/index.html
@@ -6,6 +6,7 @@
 
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-button.css' rel='stylesheet'>
+    <link href='css/wi-dropdown.css' rel='stylesheet'>
     <link href='css/wi-list.css' rel='stylesheet'>
     <link href='css/wi-status-bar.css' rel='stylesheet'>
     <link href='css/wi-tab.css' rel='stylesheet'>
