--- a/source/html/ribbon-block/project-tab/index.html
+++ b/source/html/ribbon-block/project-tab/index.html
@@ -6,5 +6,15 @@
         <wi-button label="Open Project" layout="icon-top"
                    imgurl="img/32x32/project_new_32x32.png"
                    handlers="myHandlers"></wi-button>
+        <wi-dropdown label="Save Project" layout="icon-top"
+                   imgurl="img/32x32/project_new_32x32.png"
+                   handlers="myHandlers">
+            <wi-button label="Save As" layout="icon-left"
+                       imgurl="img/32x32/project_new_32x32.png"
+                       handlers="myHandlers"></wi-button>
+            <wi-button label="Save" layout="icon-left"
+                       imgurl="img/32x32/project_new_32x32.png"
+                       handlers="myHandlers"></wi-button>
+        </wi-dropdown>
     </wi-toolbar>
 </wi-tab>
