--- a/source/html/index.html
+++ b/source/html/index.html
@@ -17,6 +17,8 @@
     <link href='css/workspace-block/explorer-block.css' rel='stylesheet'>
     <link href='css/workspace-block/working-block.css' rel='stylesheet'>
     <link href='css/workspace-block/workspace-block.css' rel='stylesheet'>
+    <link rel="stylesheet" href="css/sprite_16.css">
+    <link rel="stylesheet" href="css/sprite_32.css">
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
