treeview imgUrl -> icon sprice

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
@@ -12,17 +13,22 @@
     <link href='css/wi-tab.css' rel='stylesheet'>
     <link href='css/wi-toolbar.css' rel='stylesheet'>
     <link href='css/wi-treeview.css' rel='stylesheet'>
+    <link href='css/wi-slidingbar.css' rel='stylesheet'>
+
     <link href='css/ribbon-block/ribbon-block.css' rel='stylesheet'>
     <link href='css/status-bar/status-bar.css' rel='stylesheet'>
     <link href='css/workspace-block/explorer-block.css' rel='stylesheet'>
     <link href='css/workspace-block/working-block.css' rel='stylesheet'>
     <link href='css/workspace-block/workspace-block.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
+    <script src="vendor/js/angular-ui-router.js"></script>
+    <script src="vendor/js/jquery-ui.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
 </head>
