--- a/source/html/index.html
+++ b/source/html/index.html
@@ -27,7 +27,7 @@
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
-    <script src="vendor/js/angular-ui-router.js"></script>
+    <!--<script src="vendor/js/angular-ui-router.js"></script>-->
     <script src="vendor/js/jquery-ui.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
