push new tab from treeview

--- a/source/html/working-block/index.html
+++ b/source/html/working-block/index.html
@@ -1,4 +1,4 @@
-<wi-tabset>
+<wi-tabset class="pane">
     <wi-tab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs">
         <div ng-switch="tab.type">
             <div ng-switch-when="dogs">
