--- a/source/html/index.html
+++ b/source/html/index.html
@@ -15,6 +15,8 @@
     <link href='css/wi-treeview.css' rel='stylesheet'>
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
 
+    <link href='css/wi-workingtabs.css' rel='stylesheet'>
+
     <link href='css/ribbon-block/ribbon-block.css' rel='stylesheet'>
     <link href='css/status-bar/status-bar.css' rel='stylesheet'>
     <link href='css/workspace-block/explorer-block.css' rel='stylesheet'>
