--- a/source/html/working-block/index.html
+++ b/source/html/working-block/index.html
@@ -1,5 +1,5 @@
-<wi-tabset class="pane">
-    <wi-tab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs">
+<wi-workingtabset class="pane" tab-configs="workingTabs">
+    <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs">
         <div ng-switch="tab.type">
             <div ng-switch-when="dogs">
                 <h1>Dogs</h1>
@@ -21,6 +21,6 @@
                 <p>none</p>
             </div>
         </div>
-    </wi-tab>
+    </wi-workingtab>
 
-</wi-tabset>
+</wi-workingtabset>
