--- a/source/html/ribbon-block/well-tab/index.html
+++ b/source/html/ribbon-block/well-tab/index.html
@@ -1,9 +1,9 @@
 <wi-tab name="WellTab" heading='{{config.WellTab.heading}}' closable="false">
     <wi-toolbar label="Well">
-        <wi-button label="Well1" layout="icon-top"
+        <wi-button label="Well1" layout="icon-left"
                    imgurl="img/32x32/project_new_32x32.png"
                    handlers="myHandlers"></wi-button>
-        <wi-button label="Well2" layout="icon-top"
+        <wi-button label="Well2" layout="icon-left"
                    imgurl="img/32x32/project_new_32x32.png"
                    handlers="myHandlers"></wi-button>
     </wi-toolbar>
