--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -6,25 +6,27 @@
                 <h4 class="modal-title">New Project</h4>
             </div>
             <div class="modal-body">
-                <div class="form-group">
-                    <label for="">Project Name: </label>
-                    <input type="text" ng-model="name" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for=""> Location: </label>
-                    <input type="text" ng-model="location" class="form-control">
-                </div>
-                <div class="form-group">
-                   <label for="">Company: </label>
-                   <input type="text" ng-model="company" class="form-control">
-               </div>
-                <div class="form-group">
-                   <label for="">Department: </label>
-                   <input type="text" ng-model="department" class="form-control">
-               </div>
-                <div class="form-group">
-                    <label for="">Description: </label>
-                    <textarea name="des" id="" cols="30" rows="10" ng-model="description" class="form-control"></textarea>
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <label for="" class="control-label">Project Name: </label>
+                        <input type="text" ng-model="name" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="control-label"> Location: </label>
+                        <input type="text" ng-model="location" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="control-label">Company: </label>
+                        <input type="text" ng-model="company" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="control-label">Department: </label>
+                        <input type="text" ng-model="department" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="" class="control-label">Description: </label>
+                        <textarea name="des" id="" cols="30" rows="10" ng-model="description" class="form-control"></textarea>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
