--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Well Insignt App</title>
+    <title>Well Insight App</title>
 
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
