wi-logplot: done separate layout with wi-slidingbar

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -17,6 +17,7 @@
     <link href='css/wi-treeview.css' rel='stylesheet'>
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
 
+    <link href='css/wi-logplot.css' rel='stylesheet'>
     <link href='css/wi-workingtabs.css' rel='stylesheet'>
 
     <link href='css/ribbon-block/ribbon-block.css' rel='stylesheet'>
@@ -31,7 +32,6 @@
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
-    <!--<script src="vendor/js/angular-ui-router.js"></script>-->
     <script src="vendor/js/jquery-ui.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
