--- a/source/html/working-block/index.html
+++ b/source/html/working-block/index.html
@@ -1,25 +1,27 @@
 <wi-workingtabset class="pane" tab-configs="workingTabs">
-    <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs">
-        <div ng-switch="tab.type">
-            <div ng-switch-when="dogs">
-                <h1>Dogs</h1>
-                <p>Welcome to a world of dogs.</p>
-            </div>
+    <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs" ng-switch="tab.type" ng-class="{'wi-display-none': !tab.active}">
+        <div class="working-tab-content" ng-switch-when="dogs" >
+            <h1>Dogs</h1>
+            <p>Welcome to a world of dogs.</p>
+        </div>
 
-            <div ng-switch-when="tuts">
-                <h1>Tutorials</h1>
-                <p>Learn from examples.</p>
-            </div>
+        <div class="working-tab-content" ng-switch-when="tuts">
+            <h1>Tutorials</h1>
+            <p>Learn from examples.</p>
+        </div>
 
-            <div ng-switch-when="cars">
-                <h1>Cars</h1>
-                <p>Read about cars.</p>
-            </div>
+        <div class="working-tab-content" ng-switch-when="cars">
+            <h1>Cars</h1>
+            <p>Read about cars.</p>
+        </div>
 
-            <div ng-switch-default>
-                <h1>Default</h1>
-                <p>none</p>
-            </div>
+        <div class="working-tab-content working-logplot-tab-container" ng-switch-when="logplot">
+            <wi-logplot></wi-logplot>
+        </div>
+
+        <div class="working-tab-content" ng-switch-default>
+            <h1>Default</h1>
+            <p>none</p>
         </div>
     </wi-workingtab>
 
