--- a/source/dialogs/confirm/confirm-modal-test.html
+++ b/source/dialogs/confirm/confirm-modal-test.html
@@ -11,7 +11,7 @@
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <!--<script src="../main.js"></script>-->
-    <script src='js/main-new-project-modal.js.bundle.js'></script>
+    <script src='js/main-confirm-modal.js.bundle.js'></script>
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
