--- a/source/dialogs/unit-setting/unit-setting-modal-test.html
+++ b/source/dialogs/unit-setting/unit-setting-modal-test.html
@@ -11,13 +11,13 @@
     <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <!--<script src="../main.js"></script>-->
-    <script src='js/main-new-project-modal.js.bundle.js'></script>
+    <script src='js/main-unit-setting-modal.js.bundle.js'></script>
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
     <h3>Angular Modal Service</h3>
     <a class="btn btn-default" href ng-click="show()">Show a Modal</a>
-    <p>{{message}}</p>
+    <p>{{name}}</p>
 </div>
 </body>
 </html>
