--- a/source/html/index.html
+++ b/source/html/index.html
@@ -8,6 +8,7 @@
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
     <link href='css/main.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="css/dialogs.css">
     <link href='css/wi-button.css' rel='stylesheet'>
     <link href='css/wi-dropdown.css' rel='stylesheet'>
     <link href='css/wi-list.css' rel='stylesheet'>
@@ -31,7 +32,7 @@
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
-    <!--<script src="vendor/js/angular-ui-router.js"></script>-->
+    <script src="vendor/js/angular-modal-service.min.js"></script>
     <script src="vendor/js/jquery-ui.js"></script>
 
     <script src="js/main.js.bundle.js"></script>
