--- a/source/html/working-block/index.html
+++ b/source/html/working-block/index.html
@@ -1,5 +1,5 @@
 <wi-workingtabset class="pane" tab-configs="workingTabs">
-    <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs" ng-switch="tab.type" ng-class="{'wi-display-none': !tab.active}">
+<!--    <wi-workingtab heading="{{tab.heading}}" closable="{{tab.closable}}" ng-repeat="tab in workingTabs" ng-switch="tab.type" ng-class="{'wi-display-none': !tab.active}">
         <div class="working-tab-content" ng-switch-when="dogs" >
             <h1>Dogs</h1>
             <p>Welcome to a world of dogs.</p>
@@ -24,5 +24,5 @@
             <p>none</p>
         </div>
     </wi-workingtab>
-
+-->
 </wi-workingtabset>
