--- a/source/html/working-block/index.html
+++ b/source/html/working-block/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="working-tab-content working-logplot-tab-container" ng-switch-when="logplot">
-            <wi-logplot></wi-logplot>
+            <wi-logplot name="{{tab.name}}"></wi-logplot>
         </div>
 
         <div class="working-tab-content" ng-switch-default>
