update all frontend

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -38,7 +38,7 @@
 </head>
 <body ng-app='wiapp'>
 
-<div class="container" ng-controller="AppController as app">
+<div ng-controller="AppController as app">
 
     <div class="ribbon-wrapper">
         @@include('./ribbon-block/index.html')
