--- a/source/dialogs/add-new/add-new-modal.html
+++ b/source/dialogs/add-new/add-new-modal.html
@@ -21,7 +21,7 @@
                         <div class="form-group">
                           <label class="control-label col-sm-3" for="topDepth">Top Depth (m)</label>
                           <div class="col-sm-9">
-                            <input type="number" class="form-control" value="" id="topDepth" name="topDepth" ng-model="topDepth">
+                            <input type="number" class="form-control" value="" id="topDepth" name="topDepth" ng-model="topDepth" currency-mask>
                           </div>
                         </div>
 
