--- a/source/dialogs/add-new/add-new-modal.html
+++ b/source/dialogs/add-new/add-new-modal.html
@@ -3,8 +3,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span><img src="img/32x32/project_new_32x32.png"></span>&nbsp;Create New Well</h4>
-                <h4 class="modal-infomation-title"><span><img src="img/32x32/project_normal_32x32.png"></span>&nbsp;Well Infomation</h4>
+                <h4 class="modal-title"><span><img src="img/32x32/well_marker_add_32x32.png"></span>&nbsp;Create New Well</h4>
+                <h5 class="modal-infomation-title">&nbsp;Well Infomation</h5>
 
             </div>
             <div class="modal-body">
@@ -38,7 +38,7 @@
                           </div>
                         </div>
                         <p>&nbsp;Leave blank for loading modules to auto create when loading first file</p>
-                      </form>
+                    </form>
                 </div>
             </div>
             <div class="modal-footer">
