prepare to merge into master

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,13 +20,6 @@
     <link href='css/wi-workingtabs.css' rel='stylesheet'>
 
     <link href='css/main.css' rel='stylesheet'>
-<!--    
-    <link href='css/ribbon-block/ribbon-block.css' rel='stylesheet'>
-    <link href='css/status-bar/status-bar.css' rel='stylesheet'>
-    <link href='css/workspace-block/explorer-block.css' rel='stylesheet'>
-    <link href='css/workspace-block/working-block.css' rel='stylesheet'>
-    <link href='css/workspace-block/workspace-block.css' rel='stylesheet'>
--->
 
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
@@ -60,6 +53,7 @@
     </template>
     <template id='property-block'>
         <wi-list heading="List 1" items="listItems"></wi-list>
+        <wi-list heading="List 2" items="listItems2"></wi-list>
     </template>
     <template id='working-block'>
         <wi-workingtabset class="pane" tab-configs="workingTabs"></wi-workingtabset>
