--- a/source/html/index.html
+++ b/source/html/index.html
@@ -56,7 +56,7 @@
         <wi-list heading="List 2" items="listItems2"></wi-list>
     </template>
     <template id='working-block'>
-        <wi-workingtabset class="pane" tab-configs="workingTabs"></wi-workingtabset>
+        <wi-workingtabset tab-configs="workingTabs"></wi-workingtabset>
     </template>
 </body>
 </html>
