modify markup: icon

--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -3,8 +3,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span><img src="img/32x32/project_new_32x32.png"></span>&nbsp;New Project</h4>
-                <h4 class="modal-infomation-title"><span><img src="img/32x32/project_normal_32x32.png"></span>&nbsp;Project Infomation</h4>
+                <h4 class="modal-title"><span class="project-new-16x16"></span>&nbsp;New Project</h4>
+                <h5 class="modal-infomation-title"><span class="project-normal-16x16"></span>&nbsp;Project Infomation</h5>
 
             </div>
             <div class="modal-body">
@@ -45,8 +45,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/ok_16x16.png"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/close_16x16.png"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
