--- a/source/dialogs/add-new/add-new-modal-test.html
+++ b/source/dialogs/add-new/add-new-modal-test.html
@@ -8,10 +8,12 @@
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
-    <script src="vendor/js/ui-bootstrap-tpls-0.14.3.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
     <!--<script src="../main.js"></script>-->
     <script src='js/main-add-new-modal.js.bundle.js'></script>
+    
+    <link rel="stylesheet" href="css/sprite_16.css">
+    <link rel="stylesheet" href="css/sprite_32.css">
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
