--- a/source/dialogs/add-new/add-new-modal.html
+++ b/source/dialogs/add-new/add-new-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span><img src="img/32x32/well_marker_add_32x32.png"></span>&nbsp;Create New Well</h4>
+                <h4 class="modal-title"><span class="well-marker-add-32x32"></span>&nbsp;Create New Well</h4>
                 <h5 class="modal-infomation-title">&nbsp;Well Infomation</h5>
 
             </div>
@@ -42,8 +42,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/ok_16x16.png"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/close_16x16.png"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
