--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -1,11 +1,11 @@
 <div class='modal fade'>
-	<div class='modal-dialog modal-sm'>
+	<div class='modal-dialog'>
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h4>{{wiModal.title}}</h4>
 			</div>
-			<div class="modal-body">
+			<div class="modal-body text-center">
 				<span>{{wiModal.confirmMsg}}</span>
 			</div>
 			<div class="modal-footer">
