--- a/source/dialogs/depth-conversion/depth-conversion-modal-test.html
+++ b/source/dialogs/depth-conversion/depth-conversion-modal-test.html
@@ -5,16 +5,12 @@
     <title>Test Modal</title>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
-    
-    <link rel="stylesheet" href="css/sprite_16.css">
-    <link rel="stylesheet" href="css/sprite_32.css">
-
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
-    
-    <script src='js/main-open-project-modal.js.bundle.js'></script>
+    <!--<script src="../main.js"></script>-->
+    <script src='js/main-depth-conversion-modal.js.bundle.js'></script>
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
