--- a/source/dialogs/well-header/well-header-modal-test.html
+++ b/source/dialogs/well-header/well-header-modal-test.html
@@ -5,7 +5,7 @@
     <title>Test Modal</title>
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
-    
+
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
 
@@ -13,14 +13,14 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
-    
-    <script src='js/main-open-project-modal.js.bundle.js'></script>
+    <!--<script src="../main.js"></script>-->
+    <script src='js/main-well-header-modal.js.bundle.js'></script>
 </head>
 <body ng-app='app'>
 <div ng-controller="SampleController">
     <h3>Angular Modal Service</h3>
     <a class="btn btn-default" href ng-click="show()">Show a Modal</a>
-    <p>{{message}}</p>
+    <p>{{name}}</p>
 </div>
 </body>
 </html>
