--- a/source/dialogs/well-header/well-header-modal.html
+++ b/source/dialogs/well-header/well-header-modal.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header container-fluid">
         <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title"><span><img src="img/32x32/project_new_32x32.png"></span>&nbsp;Well Header</h4>
+        <h4 class="modal-title"><span class="project-new-16x16"></span>&nbsp;Well Header</h4>
       </div>
       <div class="modal-body container-fluid">
         <form class="form-horizontal" action="" name="modalWellHeader">
@@ -207,16 +207,13 @@
               </div>
             </div>
           </div>
-
-
           </div>
         </form>
-
       </div>
       <div class="modal-footer container-fluid">
         <div class="row">
-          <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/ok_16x16.png"></span>&nbsp;OK</button>
-          <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span><img src="img/16x16/close_16x16.png"></span>&nbsp;Cancel</button>
+          <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
+          <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
         </div>
       </div>
     </div>
