--- a/source/html/index.html
+++ b/source/html/index.html
@@ -49,6 +49,9 @@
 
     </div>
     <template id='explorer-block'>
+        <div>
+            <span>Name</span><span>Unit</span>
+        </div>
         <wi-treeview config="myConfig"></wi-treeview>
     </template>
     <template id='property-block'>
@@ -57,6 +60,9 @@
     </template>
     <template id='working-block'>
         <wi-workingtabset class="pane" tab-configs="workingTabs"></wi-workingtabset>
+    </template>
+    <template id='vovan'>
+        <h2>Vo va vo van</h2>
     </template>
 </body>
 </html>
