adjust layout for wi-logplot, minor tune for slidingBar

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -58,5 +58,8 @@
     <template id='working-block'>
         <wi-workingtabset class="pane" tab-configs="workingTabs"></wi-workingtabset>
     </template>
+    <template id='wi-logplot'>
+        <wi-logplot></wi-logplot>
+    </template>
 </body>
 </html>
