--- a/source/html/index.html
+++ b/source/html/index.html
@@ -49,7 +49,7 @@
 
     </div>
     <template id='explorer-block'>
-        <div>
+        <div class="label_treeview">
             <span>Name</span><span>Unit</span>
         </div>
         <wi-treeview config="myConfig"></wi-treeview>
