wi-properties: create

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -59,8 +59,7 @@
     </template>
 
     <template id='property-block'>
-        <wi-list heading="List 1" items="listItems"></wi-list>
-        <wi-list heading="List 2" items="listItems2"></wi-list>
+        <wi-properties></wi-properties>
     </template>
 </body>
 </html>
