wi-properties: main config

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -59,7 +59,7 @@
     </template>
 
     <template id='property-block'>
-        <wi-properties></wi-properties>
+        <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties>
     </template>
 </body>
 </html>
