--- a/source/dialogs/depth-conversion/depth-conversion-modal.html
+++ b/source/dialogs/depth-conversion/depth-conversion-modal.html
@@ -65,7 +65,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" ng-click="wiModal.close()" class="btn btn-default" data-dismiss="modal"><span class="run-16x16"></span>&nbsp;Run</button>
+				<button type="button" ng-click="wiModal.runClick()" class="btn btn-default"><span class="run-16x16"></span>&nbsp;Run</button>
                 <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
 			</div>
 		</div>
