--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,6 +20,7 @@
     <link href='css/wi-toolbar.css' rel='stylesheet'>
     <link href='css/wi-tab.css' rel='stylesheet'>
     <link href='css/wi-list.css' rel='stylesheet'>
+    <link href='css/wi-context-menu.css' rel='stylesheet'>
     <link href='css/wi-treeview.css' rel='stylesheet'>
     <link href='css/wi-status-bar.css' rel='stylesheet'>
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
@@ -50,6 +51,7 @@
 
         <div id='myLayout'>
         </div>
+        <wi-context-menu name="ContextMenu"></wi-context-menu>
     </div>
 
     <template id='explorer-block'>
