disable/ enable ribbon

--- a/source/dialogs/open-project/open-project-modal.html
+++ b/source/dialogs/open-project/open-project-modal.html
@@ -53,7 +53,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" ng-click="wiModal.close(wiModal.projectName);" class="btn btn-default" data-dismiss="modal" ng-disabled="!modalOpenProject.$dirty || (modalOpenProject.$dirty && modalOpenProject.$invalid)"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.close('Cancel click')" class="btn btn-default" data-dismiss="modal"><span class="cancel-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.close()" class="btn btn-default" data-dismiss="modal"><span class="cancel-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
