--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -1,5 +1,5 @@
 <div class='modal fade'>
-	<div class='modal-dialog'>
+	<div class='modal-dialog modal-sm'>
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
