create new some dialogs

--- a/source/dialogs/3-tracks-blank/3-tracks-blank-modal.html
+++ b/source/dialogs/3-tracks-blank/3-tracks-blank-modal.html
@@ -7,7 +7,7 @@
                 <p>Log plot</p>
             </div>
             <div class="modal-body text-center">
-                <form class="form-horizontal" action="" name="modalBlankPlot">
+                <form class="form-horizontal" action="" name="modal3TracksBlank">
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="name">Well name:</label>
                         <div class="col-sm-9">
