--- a/source/dialogs/input-curve/input-curve-modal.html
+++ b/source/dialogs/input-curve/input-curve-modal.html
@@ -7,7 +7,7 @@
                 <p>Log plot</p>
             </div>
             <div class="modal-body text-center">
-                <form class="form-horizontal" action="" name="modalBlankPlot">
+                <form class="form-horizontal" action="" name="modalInputCurve">
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="name">Well name:</label>
                         <div class="col-sm-9">
